<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="scanBarcode">Scan</string>
    <string name="mainImage">Zebra barcode</string>
    <string name="findPriceButton">Find price</string>
    <string name="scanBarcode">Scan Barcode</string>
    <string name="app_name">Lowest Price</string>
    <string name="barcode">Barcode</string>
    <string name="productName">Product Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="bucket">Bucket</string>
    <string name="home">Home</string>
    <string name="shop_cart">Shop Cart</string>
    <string name="productNameOrBarcode">Name or Barcode</string>
    <string name="addToCart">Add to cart</string>
    <string name="createCart">New cart</string>
    <string name="newCart">New cart</string>
</resources>
