<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/barcodeWrapper"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/barcode"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:hint="@string/barcode"
            android:inputType="number"
            android:maxLength="15"
            android:editable="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_weight="0.7"
            android:ems="10"/>

        <Button
            android:id="@+id/scanButton"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/scan"
            android:layout_weight="0.3"/>

    </LinearLayout>

    <EditText
        android:id="@+id/productName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/productName"
        android:inputType="text"
        android:layout_below="@id/barcodeWrapper"/>

    <EditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:maxLength="20"
        android:layout_below="@id/productName"/>

    <EditText
        android:id="@+id/quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/quantity"
        android:inputType="number"
        android:maxLength="10"
        android:layout_below="@id/price"/>

    <EditText
        android:id="@+id/barcodeType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="text"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/productType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="text"
        android:visibility="invisible"/>

    <LinearLayout
        android:id="@+id/buttonsWrapper"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quantity">

        <Button
            android:id="@+id/addButton"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/add"
            android:layout_weight="1.0"/>

        <Button
            android:id="@+id/resetButton"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/reset"
            android:layout_weight="1.0"/>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/save"
            android:layout_weight="1.0"/>

    </LinearLayout>

</RelativeLayout>
