<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/barcodeWrapper"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/barcode"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:hint="@string/barcode"
            android:inputType="number"
            android:maxLength="15"
            android:editable="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_weight="0.95"
            android:ems="13"/>

        <ImageButton
                android:id="@+id/scanBarcodeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:text="@string/scanBarcode"
                android:src="@drawable/ic_barcode"
                android:contentDescription="@string/scanBarcode"
                />

    </LinearLayout>

    <EditText
        android:id="@+id/productName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="13"
        android:hint="@string/productName"
        android:inputType="text"
        android:layout_below="@id/barcodeWrapper"/>

    <EditText
        android:id="@+id/quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="13"
        android:hint="@string/quantity"
        android:inputType="number"
        android:maxLength="10"
        android:layout_below="@id/productName"/>

    <LinearLayout
        android:id="@+id/buttonsWrapper"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quantity">

        <Button
            android:id="@+id/addToCartButton"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:drawableLeft="@drawable/ic_shop_cart"
            android:text="@string/addToCart"
            android:layout_weight="1.0"/>

    </LinearLayout>

    <EditText
        android:id="@+id/barcodeType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="13"
        android:inputType="text"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/productType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="13"
        android:inputType="text"
        android:visibility="invisible"/>

</RelativeLayout>
